--- a/menus/reasonable-atom-starter.json
+++ b/menus/reasonable-atom-starter.json
@@ -2,8 +2,8 @@
   "context-menu": {
     "atom-text-editor": [
       {
-        "label": "Toggle atom-reason-starter",
-        "command": "atom-reason-starter:toggle"
+        "label": "Toggle reasonable-atom-starter",
+        "command": "reasonable-atom-starter:toggle"
       }
     ]
   },
@@ -12,11 +12,11 @@
       "label": "Packages",
       "submenu": [
         {
-          "label": "atom-reason-starter",
+          "label": "reasonable-atom-starter",
           "submenu": [
             {
               "label": "Toggle",
-              "command": "atom-reason-starter:toggle"
+              "command": "reasonable-atom-starter:toggle"
             }
           ]
         }
