Upgraded to latest bs-platform and such

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,9 +1,5 @@
 {
   "name": "reasonable-atom-starter",
-  "ppx-flags": ["reason/reactjs_jsx_ppx.native"],
-  "refmt": "reason/refmt_impl.native",
-  "bs-dependencies": ["reason-js", "rebase"],
-  "sources": [
-    "lib"
-  ],
+  "bs-dependencies": ["bs-webapi", "rebase"],
+  "sources": ["lib"]
 }
